<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!--Top Sites Section-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topsites"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <include layout="@layout/topsite_element" />
        <include layout="@layout/topsite_element"/>
        <include layout="@layout/topsite_element"/>
        <include layout="@layout/topsite_element"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <include layout="@layout/topsite_element" />
        <include layout="@layout/topsite_element"/>
        <include layout="@layout/topsite_element"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_add_black_24dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <!-- Trending Section-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trending"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="4 Carousel"
        android:textStyle="italic"
        android:textSize="25sp"
        android:background="#fff"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:gravity="center"/>


    <!-- Categories Section-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <include layout="@layout/catergories_element" />
        <include layout="@layout/catergories_element"/>
        <include layout="@layout/catergories_element"/>
        <include layout="@layout/catergories_element"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <include layout="@layout/catergories_element" />
        <include layout="@layout/catergories_element"/>
        <include layout="@layout/catergories_element"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=" View All  "
            android:gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#fff"/>
    </LinearLayout>

    <!-- Footer Section-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/foot1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/foot2"/>

</LinearLayout>